# JavaSpringToInsomnia

./: .gitignore  Cargo.toml  README.md
src/: java_annotations.rs  main.rs
src/exports/: base.rs  environment.rs  mod.rs  request.rs  resources.rs  workspace.rs
